[gd_scene load_steps=3 format=3 uid="uid://bdte2ftg6qu1k"]

[ext_resource type="FontFile" uid="uid://b81lok3nrqofl" path="res://fonts/BrunoAceSC-Regular.ttf" id="1_5mb7e"]
[ext_resource type="Script" path="res://hud.gd" id="1_q1mka"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_q1mka")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -600.0
offset_right = 600.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.501961, 0.862745, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5mb7e")
theme_override_font_sizes/font_size = 64
text = "Score: 0"
horizontal_alignment = 1

[node name="HighestScoreLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -43.0
offset_right = 244.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.839216, 0.780392, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5mb7e")
theme_override_font_sizes/font_size = 32
text = "Highest score: 0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -353.5
offset_top = -163.5
offset_right = 353.5
offset_bottom = -62.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.999777, 0.245676, 0.188232, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5mb7e")
theme_override_font_sizes/font_size = 80
text = "Angry Robots"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = 62.0
offset_right = 226.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_5mb7e")
theme_override_font_sizes/font_size = 64
text = "Start!"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
